# mcp_step

./: .gitignore  README.md  host.py  mcp.yaml  pyproject.toml
app/: main_host.py
app/clients/: client.py  host.py  lang_host.py
app/src/config/: mcp.yaml  server.json
app/src/servers/: filesys_server.py  slack_server.py  weather.py  wl_server.py
example/: channels.txt  document.txt  test.txt  users.txt  weather.py
servers/: filesys_server.py  slack_server.py  test_server.py  wl_server.py
servers/modules/: config.py  db.py  oci_client.py
